--- a/src/input.css
+++ b/src/input.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+    .icon-wrapper {
+      @apply hover:scale-110 hover:cursor-pointer transition [&>*]:w-7 [&>*]:h-7 text-slate-900;
+    }
+  }
